[tool.poetry]
authors = ["m09 <142691+m09@users.noreply.github.com>"]
description = ""
name = "q-learning"
version = "0.1.0"

[tool.poetry.dependencies]
gymnasium = "^0.29"
numpy = "^1"
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^24"
flake8 = "^7"
isort = "^5"
mypy = "^1"
pylint = "^3"
pytest = "^8"

[tool.isort]
profile = "black"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
